<resources>
    <string name="app_name">Mentate</string>
    <string name="name">Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="age">Age</string>
    <string name="age_hint">Enter your age</string>
    <string name="save">save</string>
    <string name="select_an_option">Please select an option</string>
    <string name="next">Next</string>
    <string name="question_number">Question %1$d</string>
    <string name="back_to_home">Back To Home</string>
    <string name="your_score">Your Score : %1$d</string>
    <string name="best_score">Best score : %1$d</string>
    <string name="start_game">Start Game</string>
    <string name="basic_information">Basic Information</string>
</resources>
